--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pythondjango-cource"
-version = "0.1.0"
+version = "1.1.12"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
@@ -11,6 +11,9 @@ python = "^3.11"
 django = "^4.2.5"
 pillow = "^10.0.1"
 psycopg2-binary = "^2.9.8"
+pytz = "^2023.3.post1"
+django-crontab = "^0.7.1"
+waitress = "^2.1.2"
 
 
 [build-system]
