--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ psycopg2-binary = "^2.9.8"
 pytz = "^2023.3.post1"
 django-crontab = "^0.7.1"
 waitress = "^2.1.2"
+python-dotenv = "^1.0.0"
+redis = "^5.0.1"
+apscheduler = "^3.10.4"
+django-apscheduler = "^0.6.2"
 
 
 [build-system]
